--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bad-purchases-client",
+  "name": "luca-bad-purchases-client",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
